--- a/templates/index.html
+++ b/templates/index.html
@@ -116,24 +116,24 @@
 
 
 					</nav><!-- #primary-menu end -->
+					
 				</div>
 
 			</div>
 
 		</header><!-- #header end -->
 
-
 		<!-- Slider
 		============================================= -->
 		<section id="slider" class="slider-element revslider-wrap full-screen clearfix">
 
 			<div id="welcome_wrapper" class="rev_slider_wrapper fullscreen-container" data-alias="reveal-add-on39" data-source="gallery" style="background:#ffffff;padding:0px;">
-				<!-- START REVOLUTION SLIDER 5.4.6 fullscreen mode -->
+				<!-- START SLIDER 5.4.6 fullscreen mode -->
 				<div id="welcome" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.6">
 					<ul>	<!-- SLIDE  -->
 						<li class="dark" data-index="rs-243" data-transition="fadethroughdark" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="include/rs-plugin/demos/assets/images/purpleway.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 							<!-- MAIN IMAGE -->
-							<img src="include/rs-plugin/demos/assets/images/dummy.png"  alt=""  data-lazyload="{{ url_for('static', filename='images/buyout-blue2.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+							<img src="{{ url_for('static', filename='images/dummy.png') }}"  alt=""  data-lazyload="{{ url_for('static', filename='images/buyout-blue2B.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
 							<!-- LAYERS -->
 
 							<!-- LAYER NR. 1 -->
@@ -208,7 +208,7 @@
 
 							<!-- LAYER NR. 4 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
-					 			href="http://themes.semicolonweb.com/html/canvas/intro.php#section-niche" target="_blank"
+					 			href="search"
 					 			id="slide-243-layer-12"
 								 data-x="['center','center','center','center']" data-hoffset="['-150','-150','0','0']"
 								 data-y="['middle','middle','middle','middle']" data-voffset="['150','140','130','100']"
@@ -232,7 +232,7 @@
 
 							<!-- LAYER NR. 5 -->
 							<a class="tp-caption rev-btn   tc-btnshadow"
-								href="http://themeforest.net/item/canvas-the-multipurpose-html5-template/9228123?ref=SemiColonWeb&license=regular&open_purchase_for_item_id=9228123&purchasable=source" target="_blank"
+								href="analytics"
 								id="slide-243-layer-13"
 								 data-x="['center','center','center','center']" data-hoffset="['150','150','0','0']"
 								 data-y="['middle','middle','middle','middle']" data-voffset="['150','140','190','160']"
@@ -257,7 +257,7 @@
 						<!-- SLIDE  -->
 						<li class="dark" data-index="rs-244" data-transition="fadethroughdark" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="include/rs-plugin/demos/assets/images/bottlesbg.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 							<!-- MAIN IMAGE -->
-							<img src="include/rs-plugin/demos/assets/images/dummy.png"  alt=""  data-lazyload="{{ url_for('static', filename='images/buyout-green.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+							<img src="{{ url_for('static', filename='images/dummy.png') }}"  alt=""  data-lazyload="{{ url_for('static', filename='images/buyout-purple.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
 							<!-- LAYERS -->
 
 							<!-- LAYER NR. 6 -->
@@ -284,10 +284,10 @@
 
 							<!-- LAYER NR. 7 -->
 							<div class="tp-caption  "
-								 id="slide-244-layer-1"
-								 data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-								 data-y="['middle','middle','middle','middle']" data-voffset="['-90','-90','-120','-140']"
-											data-fontsize="['90','80','70','60']"
+								id="slide-244-layer-1"
+								data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+								data-y="['middle','middle','middle','middle']" data-voffset="['-90','-90','-120','-140']"
+								data-fontsize="['90','80','70','60']"
 								data-lineheight="['90','80','70','60']"
 								data-letterspacing="['-5','-5','-2','-3']"
 								data-width="['800','none','360','260']"
@@ -304,14 +304,14 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 90px; line-height: 90px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;">New Title 1</div>
+								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 90px; line-height: 90px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;">Analytics</div>
 
 							<!-- LAYER NR. 8 -->
 							<div class="tp-caption  "
-								 id="slide-244-layer-2"
-								 data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-								 data-y="['middle','middle','middle','middle']" data-voffset="['20','20','20','0']"
-											data-fontsize="['20','20','20','17']"
+								id="slide-244-layer-2"
+								data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+								data-y="['middle','middle','middle','middle']" data-voffset="['20','20','20','0']"
+								data-fontsize="['20','20','20','17']"
 								data-lineheight="['30','30','25','22']"
 								data-color="['rgba(255,255,255,0.75)','rgba(255,255,255,0.65)','rgba(255,255,255,0.65)','rgba(255,255,255,0.65)']"
 								data-width="['640','481','360','260']"
@@ -332,11 +332,11 @@
 
 							<!-- LAYER NR. 9 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
-								href="http://themes.semicolonweb.com/html/canvas/intro.php#section-niche" target="_blank"
+								href="search"
 								id="slide-244-layer-12"
-								 data-x="['center','center','center','center']" data-hoffset="['-150','-150','0','0']"
-								 data-y="['middle','middle','middle','middle']" data-voffset="['150','140','130','100']"
-											data-lineheight="['60','60','50','50']"
+								data-x="['center','center','center','center']" data-hoffset="['-150','-150','0','0']"
+								data-y="['middle','middle','middle','middle']" data-voffset="['150','140','130','100']"
+								data-lineheight="['60','60','50','50']"
 								data-width="['280','280','200','none']"
 								data-height="none"
 								data-whitespace="nowrap"
@@ -356,7 +356,7 @@
 
 							<!-- LAYER NR. 10 -->
 							<a class="tp-caption rev-btn   tc-btnshadow"
-								href="http://themeforest.net/item/canvas-the-multipurpose-html5-template/9228123?ref=SemiColonWeb&license=regular&open_purchase_for_item_id=9228123&purchasable=source" target="_blank"
+								href="analytics"
 								id="slide-244-layer-13"
 								 data-x="['center','center','center','center']" data-hoffset="['150','150','0','0']"
 								 data-y="['middle','middle','middle','middle']" data-voffset="['150','140','190','160']"
@@ -381,15 +381,15 @@
 						<!-- SLIDE  -->
 						<li class="dark" data-index="rs-245" data-transition="fadethroughdark" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="include/rs-plugin/demos/assets/images/citybg.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 							<!-- MAIN IMAGE -->
-							<img src="include/rs-plugin/demos/assets/images/dummy.png"  alt=""  data-lazyload="{{ url_for('static', filename='images/buyout-green.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+							<img src="{{ url_for('static', filename='images/dummy.png') }}"  alt=""  data-lazyload="{{ url_for('static', filename='images/buyout-red.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
 							<!-- LAYERS -->
 
 							<!-- LAYER NR. 11 -->
 							<div class="tp-caption tp-shape tp-shapewrapper "
-								 id="slide-245-layer-14"
-								 data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-								 data-y="['middle','middle','middle','middle']" data-voffset="['0','0','0','0']"
-											data-width="full"
+								id="slide-245-layer-14"
+								data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+								data-y="['middle','middle','middle','middle']" data-voffset="['0','0','0','0']"
+								data-width="full"
 								data-height="full"
 								data-whitespace="nowrap"
 
@@ -456,7 +456,7 @@
 
 							<!-- LAYER NR. 14 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
-								href="http://themes.semicolonweb.com/html/canvas/intro.php#section-niche" target="_blank"
+								href="search"
 								id="slide-245-layer-12"
 								 data-x="['center','center','center','center']" data-hoffset="['-150','-150','0','0']"
 								 data-y="['middle','middle','middle','middle']" data-voffset="['150','140','130','100']"
@@ -480,7 +480,7 @@
 
 							<!-- LAYER NR. 15 -->
 							<a class="tp-caption rev-btn   tc-btnshadow"
-								href="http://themeforest.net/item/canvas-the-multipurpose-html5-template/9228123?ref=SemiColonWeb&license=regular&open_purchase_for_item_id=9228123&purchasable=source" target="_blank"
+								href="analytics"
 								id="slide-245-layer-13"
 								 data-x="['center','center','center','center']" data-hoffset="['150','150','0','0']"
 								 data-y="['middle','middle','middle','middle']" data-voffset="['150','140','190','160']"
@@ -505,7 +505,7 @@
 					</ul>
 					<div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
 				</div>
-			</div><!-- END REVOLUTION SLIDER -->
+			</div><!-- END SLIDER -->
 
 		</section>
 
