--- a/templates/index.html
+++ b/templates/index.html
@@ -133,15 +133,15 @@
 					<ul>	<!-- SLIDE  -->
 						<li class="dark" data-index="rs-243" data-transition="fadethroughdark" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="include/rs-plugin/demos/assets/images/purpleway.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 							<!-- MAIN IMAGE -->
-							<img src="{{ url_for('static', filename='images/dummy.png') }}"  alt=""  data-lazyload="{{ url_for('static', filename='images/buyout-blue2B.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+							<img src="{{ url_for('static', filename='images/dummy.png') }}"  alt=""  data-lazyload="{{ url_for('static', filename='images/buyout-blueB.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
 							<!-- LAYERS -->
 
 							<!-- LAYER NR. 1 -->
 							<div class="tp-caption tp-shape tp-shapewrapper "
-								 id="slide-243-layer-14"
-								 data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-								 data-y="['middle','middle','middle','middle']" data-voffset="['0','0','0','0']"
-											data-width="full"
+								id="slide-243-layer-14"
+								data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+								data-y="['middle','middle','middle','middle']" data-voffset="['0','0','0','0']"
+								data-width="full"
 								data-height="full"
 								data-whitespace="nowrap"
 
@@ -160,10 +160,10 @@
 
 							<!-- LAYER NR. 2 -->
 							<div class="tp-caption  "
-								 id="slide-243-layer-1"
-								 data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-								 data-y="['middle','middle','middle','middle']" data-voffset="['-90','-90','-120','-140']"
-											data-fontsize="['80','80','70','60']"
+								id="slide-243-layer-1"
+								data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+								data-y="['middle','middle','middle','middle']" data-voffset="['-90','-90','-120','-140']"
+								data-fontsize="['80','80','70','60']"
 								data-lineheight="['80','80','70','60']"
 								data-letterspacing="['-5','-5','-2','-3']"
 								data-width="['800','none','360','260']"
@@ -184,10 +184,10 @@
 
 							<!-- LAYER NR. 3 -->
 							<div class="tp-caption  "
-								 id="slide-243-layer-2"
-								 data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-								 data-y="['middle','middle','middle','middle']" data-voffset="['20','20','20','0']"
-											data-fontsize="['20','20','20','17']"
+								id="slide-243-layer-2"
+								data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+								data-y="['middle','middle','middle','middle']" data-voffset="['20','20','20','0']"
+								data-fontsize="['20','20','20','17']"
 								data-lineheight="['30','30','25','22']"
 								data-color="['rgba(255,255,255,0.75)','rgba(255,255,255,0.65)','rgba(255,255,255,0.65)','rgba(255,255,255,0.65)']"
 								data-width="['640','481','360','260']"
@@ -208,11 +208,11 @@
 
 							<!-- LAYER NR. 4 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
-					 			href="search"
+					 			href="county"
 					 			id="slide-243-layer-12"
-								 data-x="['center','center','center','center']" data-hoffset="['-150','-150','0','0']"
-								 data-y="['middle','middle','middle','middle']" data-voffset="['150','140','130','100']"
-											data-lineheight="['60','60','50','50']"
+								data-x="['center','center','center','center']" data-hoffset="['-150','-150','0','0']"
+								data-y="['middle','middle','middle','middle']" data-voffset="['150','140','130','100']"
+								data-lineheight="['60','60','50','50']"
 								data-width="['280','280','200','none']"
 								data-height="none"
 								data-whitespace="nowrap"
@@ -228,15 +228,15 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[50,50,20,20]"
 
-								style="z-index: 8; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,109,210);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cube" style="font-size:17px;margin-right:5px;"></i> Listing &nbsp;Search </a>
+								style="z-index: 8; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,109,210);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cube" style="font-size:17px;margin-right:5px;"></i> Harris &nbsp;County </a>
 
 							<!-- LAYER NR. 5 -->
 							<a class="tp-caption rev-btn   tc-btnshadow"
-								href="analytics"
+								href="neighborhoods"
 								id="slide-243-layer-13"
-								 data-x="['center','center','center','center']" data-hoffset="['150','150','0','0']"
-								 data-y="['middle','middle','middle','middle']" data-voffset="['150','140','190','160']"
-											data-lineheight="['60','60','50','50']"
+								data-x="['center','center','center','center']" data-hoffset="['150','150','0','0']"
+								data-y="['middle','middle','middle','middle']" data-voffset="['150','140','190','160']"
+								data-lineheight="['60','60','50','50']"
 								data-width="['280','280','200','none']"
 								data-height="none"
 								data-whitespace="nowrap"
@@ -252,7 +252,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[50,50,20,20]"
 
-								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(91,17,184);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Analytics &nbsp;Data </a>
+								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(91,17,184);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Neighborhoods </a>
 						</li>
 						<!-- SLIDE  -->
 						<li class="dark" data-index="rs-244" data-transition="fadethroughdark" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="include/rs-plugin/demos/assets/images/bottlesbg.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
@@ -262,10 +262,10 @@
 
 							<!-- LAYER NR. 6 -->
 							<div class="tp-caption tp-shape tp-shapewrapper "
-								 id="slide-244-layer-14"
-								 data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-								 data-y="['middle','middle','middle','middle']" data-voffset="['0','0','0','0']"
-											data-width="full"
+								id="slide-244-layer-14"
+								data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+								data-y="['middle','middle','middle','middle']" data-voffset="['0','0','0','0']"
+								data-width="full"
 								data-height="full"
 								data-whitespace="nowrap"
 
@@ -332,7 +332,7 @@
 
 							<!-- LAYER NR. 9 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
-								href="search"
+								href="analytics"
 								id="slide-244-layer-12"
 								data-x="['center','center','center','center']" data-hoffset="['-150','-150','0','0']"
 								data-y="['middle','middle','middle','middle']" data-voffset="['150','140','130','100']"
@@ -352,15 +352,15 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[50,50,20,20]"
 
-								style="z-index: 8; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,109,210);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cube" style="font-size:17px;margin-right:5px;"></i> Listing &nbsp;Search </a>
+								style="z-index: 8; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,109,210);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cube" style="font-size:17px;margin-right:5px;"></i> Dashboard </a>
 
 							<!-- LAYER NR. 10 -->
 							<a class="tp-caption rev-btn   tc-btnshadow"
 								href="analytics"
 								id="slide-244-layer-13"
-								 data-x="['center','center','center','center']" data-hoffset="['150','150','0','0']"
-								 data-y="['middle','middle','middle','middle']" data-voffset="['150','140','190','160']"
-											data-lineheight="['60','60','50','50']"
+								data-x="['center','center','center','center']" data-hoffset="['150','150','0','0']"
+								data-y="['middle','middle','middle','middle']" data-voffset="['150','140','190','160']"
+								data-lineheight="['60','60','50','50']"
 								data-width="['280','280','200','none']"
 								data-height="none"
 								data-whitespace="nowrap"
@@ -376,7 +376,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[50,50,20,20]"
 
-								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(91,17,184);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Analytics &nbsp;Data </a>
+								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(91,17,184);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Storyboard </a>
 						</li>
 						<!-- SLIDE  -->
 						<li class="dark" data-index="rs-245" data-transition="fadethroughdark" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="include/rs-plugin/demos/assets/images/citybg.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
@@ -408,10 +408,10 @@
 
 							<!-- LAYER NR. 12 -->
 							<div class="tp-caption  "
-								 id="slide-245-layer-1"
-								 data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-								 data-y="['middle','middle','middle','middle']" data-voffset="['-90','-90','-120','-140']"
-											data-fontsize="['90','80','70','60']"
+								id="slide-245-layer-1"
+								data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+								data-y="['middle','middle','middle','middle']" data-voffset="['-90','-90','-120','-140']"
+								data-fontsize="['90','80','70','60']"
 								data-lineheight="['90','80','70','60']"
 								data-letterspacing="['-5','-5','-2','-3']"
 								data-width="['800','none','360','260']"
@@ -432,10 +432,10 @@
 
 							<!-- LAYER NR. 13 -->
 							<div class="tp-caption  "
-								 id="slide-245-layer-2"
-								 data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-								 data-y="['middle','middle','middle','middle']" data-voffset="['20','20','20','0']"
-											data-fontsize="['20','20','20','17']"
+								id="slide-245-layer-2"
+								data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+								data-y="['middle','middle','middle','middle']" data-voffset="['20','20','20','0']"
+								data-fontsize="['20','20','20','17']"
 								data-lineheight="['30','30','25','22']"
 								data-color="['rgba(255,255,255,0.75)','rgba(255,255,255,0.65)','rgba(255,255,255,0.65)','rgba(255,255,255,0.65)']"
 								data-width="['640','481','360','260']"
@@ -458,9 +458,9 @@
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
 								href="search"
 								id="slide-245-layer-12"
-								 data-x="['center','center','center','center']" data-hoffset="['-150','-150','0','0']"
-								 data-y="['middle','middle','middle','middle']" data-voffset="['150','140','130','100']"
-											data-lineheight="['60','60','50','50']"
+								data-x="['center','center','center','center']" data-hoffset="['-150','-150','0','0']"
+								data-y="['middle','middle','middle','middle']" data-voffset="['150','140','130','100']"
+								data-lineheight="['60','60','50','50']"
 								data-width="['280','280','200','none']"
 								data-height="none"
 								data-whitespace="nowrap"
@@ -482,9 +482,9 @@
 							<a class="tp-caption rev-btn   tc-btnshadow"
 								href="analytics"
 								id="slide-245-layer-13"
-								 data-x="['center','center','center','center']" data-hoffset="['150','150','0','0']"
-								 data-y="['middle','middle','middle','middle']" data-voffset="['150','140','190','160']"
-											data-lineheight="['60','60','50','50']"
+								data-x="['center','center','center','center']" data-hoffset="['150','150','0','0']"
+								data-y="['middle','middle','middle','middle']" data-voffset="['150','140','190','160']"
+								data-lineheight="['60','60','50','50']"
 								data-width="['280','280','200','none']"
 								data-height="none"
 								data-whitespace="nowrap"
