--- a/templates/index.html
+++ b/templates/index.html
@@ -252,7 +252,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[50,50,20,20]"
 
-								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(91,17,184);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Neighborhoods </a>
+								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,109,210);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Neighborhoods </a>
 						</li>
 						<!-- SLIDE  -->
 						<li class="dark" data-index="rs-244" data-transition="fadethroughdark" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="include/rs-plugin/demos/assets/images/bottlesbg.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
@@ -352,7 +352,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[50,50,20,20]"
 
-								style="z-index: 8; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,109,210);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cube" style="font-size:17px;margin-right:5px;"></i> Dashboard </a>
+								style="z-index: 8; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(91,17,184);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cube" style="font-size:17px;margin-right:5px;"></i> Dashboard </a>
 
 							<!-- LAYER NR. 10 -->
 							<a class="tp-caption rev-btn   tc-btnshadow"
@@ -428,7 +428,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 90px; line-height: 90px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;">Notification</div>
+								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 90px; line-height: 90px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;">Contacts</div>
 
 							<!-- LAYER NR. 13 -->
 							<div class="tp-caption  "
@@ -476,7 +476,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[50,50,20,20]"
 
-								style="z-index: 8; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,109,210);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cube" style="font-size:17px;margin-right:5px;"></i> Alert &nbsp;System </a>
+								style="z-index: 8; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(201,5,0);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cube" style="font-size:17px;margin-right:5px;"></i> Alert &nbsp;System </a>
 
 							<!-- LAYER NR. 15 -->
 							<a class="tp-caption rev-btn   tc-btnshadow"
@@ -500,7 +500,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[50,50,20,20]"
 
-								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(91,17,184);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Contact &nbsp;Us </a>
+								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(201,5,0);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Contact &nbsp;Us </a>
 						</li>
 					</ul>
 					<div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
